# viso

./: CMakeLists.txt  README.md  viso.kdev4
.kdev4/: viso.kdev4
data/: default.yaml  evaluate_ate.py
include/: bundle_adjuster.h  common.h  config.h  depth_filter.h  frame_sequence.h  initializer.h  keyframe.h  map.h  map_point.h  ring_buffer.h  slam_map.h  viso.h
src/: bundle_adjuster.cpp  config.cpp  initializer.cpp  keyframe.cpp  main.cpp  video.cpp  viso.cpp
